--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -9,7 +9,7 @@ env:
   LOCATION: eastus
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 3d3f419f-b8fd-4e0f-8b9a-f9be3108d9be
-  WEBAPP-NAME: eshoponweb-webapp-lova
+  WEBAPP-NAME: eshoponweb-webapp-lova2
 
 
 jobs:
