--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,11 +5,11 @@ on: [push, workflow_dispatch]
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-lova
+  RESOURCE-GROUP: rg-eshoponweb-lova1
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 3d3f419f-b8fd-4e0f-8b9a-f9be3108d9be
-  WEBAPP-NAME: eshoponweb-webapp-lova
+  WEBAPP-NAME: eshoponweb-webapp-lova2
 
 
 jobs:
